[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMetakit"
authors = [{name = "KOLANICH"}]
description = "A pure python parswer for metakit4 database."
readme = "ReadMe.md"
keywords = ["metakit", "metakit4", "database", "parser"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"License :: Public Domain :: Unlicense",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/prebuilder/pyMetakit"}
requires-python = ">=3.4"
dependencies = [
	"pyMetakitDefinitionString" # @ 
]
dynamic = ["version"]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages.find]
include = [
	"pyMetakit",
	"pyMetakit.*",
]
namespaces = false

[tool.setuptools_scm]
