[metadata]
name = pyMetakit
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/pyMetakit.py
description = A pure python parswer for metakit4 database.
long_description = file: ReadMe.md
keywords = metakit, metakit4, database, parser
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
install_requires = pyMetakitDefinitionString @ https://gitlab.com/KOLANICH/pyMetakitDefinitionString.py

[options.packages.find]
include =
	pyMetakit
	pyMetakit.*
